styles.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');

body {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    background-color: grey;
    height: 90vh;
    font-family: Roboto, Arial;
}

.calculator-container {
    background-color: white;
    height: 515px;
    width: 400px;
    border-radius: 10px;
}

button {
    border-radius: 50%;
    width: 80px;
    height: 80px;
    font-size: 20px;
    border-style: none;
    font-weight: bolder;
}

.input {
    border: 8px solid black;
    border-radius: 15px;
    padding: 8px;
    text-align: right;
    font-size: 20px;
    width: 364px;
    font-weight: bold;
}

.button-clearall, .button-clear {
    background-color: rgba(255, 0, 0, 0.7);
    color: white;
}

.button-operator {
    background-color: yellow;
}

.button-number, .button-decimal, .button-zero {
    background-color: rgba(0, 0, 0, 0.7);
    color: white;
}

.button-zero {
    flex-grow: 1;
    border-radius: 50px;
}

.button-equal {
    background-color: rgba(0, 128, 0, 0.7);
}

.button-sign {
    background-color: coral;
}

.input-container {
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 8px 8px 0px 8px;
}

.buttons-container {
    display: flex;
    justify-content: space-between;
    gap: 8px;
    padding: 8px;
    flex-wrap: wrap;
}

